[package]
name = "feather-rp2040-blink"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt              = "0.2.0"
cortex-m                = "0.7.7"
cortex-m-rt             = "0.7.3"
embedded-hal            = "1.0.0"
# adafruit-feather-rp2040 = "0.7.0"
rp2040-hal              = { git = "https://github.com/rp-rs/rp-hal", features = ["rt", "critical-section-impl"] }
rp2040-boot2            = "0.3.0"
usbd-serial             = "0.2.0"
usb-device              = "0.3.1"
critical-section        = "1.1.2"